# nexusController

./: Cargo.toml  controller_config.json  inputSource.py  main.py  pyproject.toml  readme.md
debug/: debug_raw.py
examples/: twinStick.html  viewer.html
examples/cybermaze/: config.js  cyberMaze.html  entities.js  grid.js  index.html  input.js  lobby.js  main.js  maze.js  modes.js  pathfinder.js
legacy-python/: .gitignore  inputSource.py
legacy-python/debug/: debug_pygame.py  inputSniffer.py
legacy-python/examples/cybermaze/: config.js  input.js  main.js
legacy-python/mappers/: paranoid_mapper.py  robust_mapper.py
legacy-python/src/nexuscontroller/: __init__.py  server.py
legacy-python/src/nexuscontroller/mappers/: controllerMapper.py  paranoid_mapper.py  robust_mapper.py  scientific_mapper.py
mappers/: controllerMapper.py  paranoid_mapper.py  robust_mapper.py  scientific_mapper.py
src/: main.rs
src/nexuscontroller/: core.py  default_config.json
src/nexuscontroller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
